--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/posts">posts</a></li>
+                <li><a href="/posts">Posts</a></li>
+                <li><a href="/papers">Papers</a></li>
             </ul>
         </nav>
         <div class="container">
