--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <script>
-            const savedTheme = localStorage.getItem('theme');
-            if (savedTheme && savedTheme === 'dark' || savedTheme === 'system' && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+            const themeTemp = localStorage.getItem('theme');
+            if (themeTemp && themeTemp === 'dark' || themeTemp === 'system' && window.matchMedia('(prefers-color-scheme: dark)').matches) {
                 document.documentElement.setAttribute('data-theme', 'dark');
             }
         </script>
