General style updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
                     <li><a href="/posts">Posts</a></li>
                     <li><a href="/papers">Papers</a></li>
                     <li><a href="/cv">Curriculum Vitae</a></li>
+                    <li><a href="mailto:sengerpub@gmail.com">Contact Me</a></li>
                     <li><div class="theme-toggle" aria-label="Toggle Theme"></div></li>
                 </ul>
             </nav>
