--- a/_sass/cards.scss
+++ b/_sass/cards.scss
@@ -1,17 +1,22 @@
 .cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(384px, 1fr));
+    display: flex;
     gap: 1rem;
     align-items: center;
     justify-items: center;
+    justify-content: center;
     padding: 0;
+}
+
+.cards-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(384px, 1fr));
 }
 
 .card {
     position: relative;
     text-decoration: none;
-    background: var(--primary);
     border-radius: 1rem;
+    background: var(--primary);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.5s ease;
@@ -19,6 +24,10 @@
     text-align: center;
     max-width: 100%;
     box-sizing: border-box;
+
+    display: flex;
+    align-items: stretch;
+    height: 100%;
 
     &:hover {
         transform: translateY(-5px);
@@ -32,8 +41,26 @@
     }
 }
 
+.card-extension {
+    background: var(--background);
+    color: var(--text);
+    border-radius: 1rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 768px) {
+    .card-extension {
+        display: none;
+    }
+}
+
 .post-card {
-    padding: 1rem;
+    padding: 0.5rem;
 }
 
 .paper-card {
@@ -62,9 +89,5 @@
         margin: 0 auto;
         border-radius: 0.5rem;
         border: 2px solid var(--secondary);
-    }
-
-    p {
-        justify-self: start;
     }
 }
