--- a/_sass/structure.scss
+++ b/_sass/structure.scss
@@ -3,7 +3,9 @@
     justify-content: center;
     justify-items: center;
     align-items: center;
+    width: 100%;
     gap: 1rem;
+    flex: 1;
 }
 
 .row-top {
@@ -18,6 +20,13 @@
     justify-content: space-evenly;
 }
 
+@media (max-width: 768px) {
+    .row-collapse {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 .col {
     display: flex;
     flex-direction: column;
@@ -25,4 +34,10 @@
     justify-items: center;
     align-items: center;
     gap: 1rem;
+    width: 100%;
+    flex: 1;
+}
+
+.col-left {
+    align-items: flex-start;
 }
